--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Images</title>
   </head>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt"Lion">
   <body>
     <!-- Your code here -->
   </body>
